--- a/about.html
+++ b/about.html
@@ -6,12 +6,9 @@ background: '/img/bg-about.jpg'
 ---
 
 <h1 id="authors">Authors</h1>
-<p>List of contributions:</p>
+<p>List of contributors:</p>
 <ol>
-<li>Micolaj </li>
-<li>Mark Ma</li>
-<li>Dario Cannistra <strong>s194830</strong><ul>
-<li><em>Website creation<em></li>
-</ul>
-</li>
+<li>Micolaj Jochim <strong>s194751</strong></li>
+<li>Qixin Ma <strong>s232534</strong></li>
+<li>Dario Cannistra <strong>s194830</strong></li>
 </ol>
